# clash-sub-injector

./: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-push.yml
src/: main.py
